Implemented Profile Page, Cart,and Search Feature

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
    <application
         android:label="farm_solve"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/farm_logo">
         <activity
             android:name=".MainActivity"
             android:exported="true"
