--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   cloud_firestore: ^4.4.3
   carousel_slider: ^4.2.1
   dots_indicator: ^2.1.0
+  fluttertoast: ^8.2.1
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
