--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dots_indicator: ^2.1.0
   fluttertoast: ^8.2.1
   animated_splash_screen: ^1.3.0
+  firebase_analytics: ^10.1.4
 
 dev_dependencies:
   flutter_test:
