--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   fluttertoast: ^8.2.1
   animated_splash_screen: ^1.3.0
   firebase_analytics: ^10.1.4
+  firebase_messaging: ^14.2.6
 
 dev_dependencies:
   flutter_test:
